--- a/cluster/apps/default/vaultwarden/config-pvc.yaml
+++ b/cluster/apps/default/vaultwarden/config-pvc.yaml
@@ -2,12 +2,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: vaultwarden-data-v1
-  namespace: passwords
+  name: vaultwarden-config
+  namespace: default
 spec:
   accessModes:
-    - ReadWrite
+    - ReadWriteOnce
   resources:
     requests:
-      storage: 2Gi
+      storage: 1Gi
   storageClassName: local-path
