--- a/cluster/apps/default/vaultwarden/config-pvc.yaml
+++ b/cluster/apps/default/vaultwarden/config-pvc.yaml
@@ -7,8 +7,8 @@ metadata:
   labels:
     type: local
 spec:
-  local:
-    path: /data/vaultwarden
+  #local:
+  #  path: /data/vaultwarden
   accessModes:
     - ReadWriteOnce
   resources:
