--- a/cluster/apps/default/vaultwarden/config-pvc.yaml
+++ b/cluster/apps/default/vaultwarden/config-pvc.yaml
@@ -4,14 +4,10 @@ kind: PersistentVolumeClaim
 metadata:
   name: vaultwarden-config
   namespace: default
-  labels:
-    type: local
 spec:
-  #local:
-  #  path: /data/vaultwarden
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
-  storageClassName: local-storage
+      storage: 2Gi
+  storageClassName: local-path
