--- a/cluster/apps/default/vaultwarden/helm-release.yaml
+++ b/cluster/apps/default/vaultwarden/helm-release.yaml
@@ -20,7 +20,7 @@ spec:
       repository: vaultwarden/server
       tag: 1.24.0
     env:
-      DOMAIN: https://vaultwarden.${DOMAIN}
+      DOMAIN: https://vaultwarden.${SECRET_DOMAIN}
       #DATABASE_URL: postgresql://vaultwarden:${VAULTWARDEN_POSTGRES_PASSWORD}@vaultwarden-postgresql:5432/vaultwarden
       #ADMIN_TOKEN: ${VAULTWARDEN_ADMIN_TOKEN}
       SIGNUPS_ALLOWED: false
