--- a/cluster/core/local-path/config.yaml
+++ b/cluster/core/local-path/config.yaml
@@ -1,3 +1,4 @@
+---
 kind: ConfigMap
 apiVersion: v1
 metadata:
@@ -8,27 +9,11 @@ data:
         {
                 "nodePathMap":[
                 {
-                        "node":"DEFAULT_PATH_FOR_NON_LISTED_NODES",
-                        "paths":["/opt/local-path-provisioner"]
-                },
-                {
-                        "node":"k3s-0",
-                        "paths":["/data"]
-                },
-                {
-                        "node":"k3s-1",
-                        "paths":["/data"]
+                  "node":"DEFAULT_PATH_FOR_NON_LISTED_NODES",
+                  "paths":["/data"]
                 }
                 ]
         }
-  setup: |-
-        #!/bin/sh
-        set -eu
-        mkdir -m 0777 -p "$VOL_DIR"
-  teardown: |-
-        #!/bin/sh
-        set -eu
-        rm -rf "$VOL_DIR"
   helperPod.yaml: |-
         apiVersion: v1
         kind: Pod
@@ -37,4 +22,39 @@ data:
         spec:
           containers:
           - name: helper-pod
-            image: busybox
+            image: rancher/mirrored-library-busybox:1.34.1
+  setup: |-
+        #!/bin/sh
+        while getopts "m:s:p:" opt
+        do
+          case $opt in
+            p)
+            absolutePath=$OPTARG
+            ;;
+            s)
+            sizeInBytes=$OPTARG
+            ;;
+            m)
+            volMode=$OPTARG
+            ;;
+          esac
+        done
+        mkdir -m 0777 -p ${absolutePath}
+        chmod 701 ${absolutePath}/..
+  teardown: |-
+        #!/bin/sh
+        while getopts "m:s:p:" opt
+        do
+          case $opt in
+            p)
+            absolutePath=$OPTARG
+            ;;
+            s)
+            sizeInBytes=$OPTARG
+            ;;
+            m)
+            volMode=$OPTARG
+            ;;
+          esac
+        done
+        rm -rf ${absolutePath}
