--- a/cluster/apps/default/vaultwarden/helm-release.yaml
+++ b/cluster/apps/default/vaultwarden/helm-release.yaml
@@ -20,7 +20,7 @@ spec:
       repository: vaultwarden/server
       tag: 1.24.0
     env:
-      DOMAIN: https://vaultwarden.${SECRET_DOMAIN}
+      DOMAIN: https://vault.${SECRET_DOMAIN}
       #DATABASE_URL: postgresql://vaultwarden:${VAULTWARDEN_POSTGRES_PASSWORD}@vaultwarden-postgresql:5432/vaultwarden
       #ADMIN_TOKEN: ${VAULTWARDEN_ADMIN_TOKEN}
       SIGNUPS_ALLOWED: false
@@ -39,7 +39,7 @@ spec:
           hajimari.io/enable: "true"
           hajimari.io/icon: shield-lock
         hosts:
-          - host: &host vaultwarden.${DOMAIN}
+          - host: &host vault.${DOMAIN}
             paths:
               - path: /
                 pathType: Prefix
