--- a/cluster/apps/default/vaultwarden/config-pvc.yaml
+++ b/cluster/apps/default/vaultwarden/config-pvc.yaml
@@ -6,8 +6,8 @@ metadata:
   namespace: default
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 2Gi
-  storageClassName: local-path
+  storageClassName: nfs-csi
