--- a/cluster/core/csi-driver-nfs/storage-class.yaml
+++ b/cluster/core/csi-driver-nfs/storage-class.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: csi-driver-nfs
 provisioner: nfs.csi.k8s.io
 parameters:
-  server: "${SECRET_NFS_ADDR}"
+  server: "192.168.1.254"
   share: /mnt/disk1/kubernetes
 reclaimPolicy: Retain
 volumeBindingMode: Immediate
