--- a/cluster/apps/default/vaultwarden/helm-release.yaml
+++ b/cluster/apps/default/vaultwarden/helm-release.yaml
@@ -17,10 +17,13 @@ spec:
         namespace: flux-system
   values:
     podSecurityContext:
-      runAsUser: 65534
-      runAsGroup: 65534
-      fsGroup: 65534
-      fsGroupChangePolicy: OnRootMismatch
+      supplementalGroups:
+        - 65534
+    # podSecurityContext:
+    #   runAsUser: 65534
+    #   runAsGroup: 65534
+    #   fsGroup: 65534
+    #   fsGroupChangePolicy: OnRootMismatch
     image:
       repository: vaultwarden/server
       tag: 1.24.0
