--- a/cluster/apps/flux-system/commit-status/alerts.yaml
+++ b/cluster/apps/flux-system/commit-status/alerts.yaml
@@ -19,32 +19,7 @@ spec:
     name: flux-system
   eventSeverity: info
   eventSources:
-    - apiVersion: source.toolkit.fluxcd.io/v1beta2
-      kind: GitRepository
-      name: flux-system
-      namespace: flux-system
-
-    - apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
-      kind: Kustomization
-      name: apps
-      namespace: flux-system
-
-    - apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
-      kind: Kustomization
-      name: core
-      namespace: flux-system
-
-    - apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
-      kind: Kustomization
-      name: crds
-      namespace: flux-system
-
-    - apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
-      kind: Kustomization
-      name: flux-system
-      namespace: flux-system
-
-    - apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
-      kind: Kustomization
-      name: traefik-crds
-      namespace: flux-system
+    - kind: Kustomization
+      name: "*"
+    - kind: HelmRelease
+      name: "*"
