--- a/cluster/apps/media/sonarr/config-pvc.yaml
+++ b/cluster/apps/media/sonarr/config-pvc.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: sonarr-config
-  namespace: dashboard
+  namespace: media
 spec:
   accessModes:
     - ReadWriteMany
