--- a/cluster/apps/media/radarr/helm-release.yaml
+++ b/cluster/apps/media/radarr/helm-release.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: &app sonarr
+  name: sonarr
   namespace: media
 spec:
   interval: 15m
@@ -15,8 +15,8 @@ spec:
         name: k8s-at-home-charts
         namespace: flux-system
       interval: 15m
-  install:
-    createNamespace: true
+  #install:
+  #  createNamespace: true
   values:
     podSecurityContext:
       supplementalGroups:
@@ -36,7 +36,6 @@ spec:
     ingress:
       main:
         enabled: true
-        ingressClassName: "nginx"
         annotations:
           cert-manager.io/cluster-issuer: "letsencrypt-production"
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
