--- a/cluster/apps/media/sonarr/helm-release.yaml
+++ b/cluster/apps/media/sonarr/helm-release.yaml
@@ -74,6 +74,9 @@ spec:
         server: "192.168.0.25"
         path: /local-zfs/media
         mountPath: /media
+        mountOptions:
+          - hard
+          - nfsvers=4.1
     resources:
       requests:
         cpu: 100m
