bugfix(media): try to fix nfs on sonarr

--- a/cluster/apps/media/sonarr/helm-release.yaml
+++ b/cluster/apps/media/sonarr/helm-release.yaml
@@ -70,9 +70,10 @@ spec:
         existingClaim: sonarr-config
       media:
         enabled: true
-        type: nfs
-        server: "192.168.0.25"
-        path: /local-zfs/media
+        #type: nfs
+        nfs:
+          server: "192.168.0.25"
+          path: /local-zfs/media
         mountPath: /media
         mountOptions:
           - hard
