--- a/cluster/apps/downloads/sonarr/config-pvc.yaml
+++ b/cluster/apps/downloads/sonarr/config-pvc.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: sonarr-config
-  namespace: media
+  namespace: downloads
 spec:
   accessModes:
     - ReadWriteMany
