--- a/cluster/apps/vpn-gateway/helm-release.yaml
+++ b/cluster/apps/vpn-gateway/helm-release.yaml
@@ -66,9 +66,9 @@ spec:
                 # VPN traffic
                 - port: 51820
                   protocol: UDP
-            - to:
-                - ipBlock:
-                    cidr: 192.168.1.0/8
+            #- to:
+            #    - ipBlock:
+            #        cidr: 192.168.1.0/8
     routed_namespaces:
       - downloads
     settings:
