bugfix(downloads): fix ssl

--- a/cluster/apps/downloads/radarr/helm-release.yaml
+++ b/cluster/apps/downloads/radarr/helm-release.yaml
@@ -45,6 +45,7 @@ spec:
         tls:
           - hosts:
               - *host
+            secretName: sonarr-tls
     probes:
       liveness:
         enabled: true
