bugfix(downloads): fix ssl name

--- a/cluster/apps/downloads/radarr/helm-release.yaml
+++ b/cluster/apps/downloads/radarr/helm-release.yaml
@@ -45,7 +45,7 @@ spec:
         tls:
           - hosts:
               - *host
-            secretName: sonarr-tls
+            secretName: radarr-tls
     probes:
       liveness:
         enabled: true
