feat(downloads): qbittorent ssl

--- a/cluster/apps/downloads/qbittorrent/helm-release.yaml
+++ b/cluster/apps/downloads/qbittorrent/helm-release.yaml
@@ -42,6 +42,7 @@ spec:
         tls:
           - hosts:
               - "qbittorrent.${SECRET_DOMAIN}"
+            secretName: qbittorrent-tls
       api:
         enabled: true
         ingressClassName: "traefik"
@@ -56,6 +57,7 @@ spec:
         tls:
           - hosts:
               - "qbittorrent.${SECRET_DOMAIN}"
+            secretName: qbittorrent-tls
     persistence:
       config:
         enabled: true
