--- a/cluster/apps/downloads/qbittorrent/helm-release.yaml
+++ b/cluster/apps/downloads/qbittorrent/helm-release.yaml
@@ -30,6 +30,7 @@ spec:
         enabled: true
         ingressClassName: "traefik"
         annotations:
+          cert-manager.io/cluster-issuer: "letsencrypt-production"
           traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
           traefik.ingress.kubernetes.io/router.middlewares: "networking-internal-only@kubernetescrd"
           hajimari.io/enable: "true"
