--- a/cluster/apps/media/jellyfin/kustomization.yaml
+++ b/cluster/apps/media/jellyfin/kustomization.yaml
@@ -2,7 +2,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - namespace.yaml
-  - media-pvc.yaml
-  - downloads-pvc.yaml
-  - jellyfin
+  - config-pvc.yaml
+  - helm-release.yaml
