feat(media): flaresolverr

--- a/cluster/apps/media/kustomization.yaml
+++ b/cluster/apps/media/kustomization.yaml
@@ -4,5 +4,6 @@ kind: Kustomization
 resources:
   - namespace.yaml
   - media-pvc.yaml
-#  - downloads-pvc.yaml
+  #  - downloads-pvc.yaml
   - jellyfin
+  - flaresolverr
