feat(media): fix media pvc

--- a/cluster/apps/downloads/radarr/helm-release.yaml
+++ b/cluster/apps/downloads/radarr/helm-release.yaml
@@ -67,10 +67,10 @@ spec:
       config:
         enabled: true
         existingClaim: radarr-config
-      downloads:
+      media:
         enabled: true
-        existingClaim: downloads-pvc
-        mountMath: "/downloads"
+        existingClaim: media-pvc
+        mountPath: "/media"
     resources:
       requests:
         cpu: 100m
