--- a/cluster/apps/downloads/media-pvc.yaml
+++ b/cluster/apps/downloads/media-pvc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: media-nfs-pv
+  name: media-nfs-downloads
   namespace: downloads
 spec:
   storageClassName: media-nfs
@@ -21,7 +21,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: media-pvc
+  name: media-downloads
   namespace: downloads
 spec:
   storageClassName: media-nfs
