--- a/cluster/apps/downloads/media-pvc-movies.yaml
+++ b/cluster/apps/downloads/media-pvc-movies.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: media-nfs-downloads
+  name: media-nfs-movies
   namespace: downloads
 spec:
   storageClassName: media-nfs
@@ -13,7 +13,7 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   nfs:
     server: 192.168.0.25
-    path: "/local-zfs/media"
+    path: "/local-zfs/media/Movies"
   mountOptions:
     - nfsvers=4.1
     - hard
@@ -21,7 +21,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: media-downloads
+  name: media-movies
   namespace: downloads
 spec:
   storageClassName: media-nfs
