--- a/cluster/apps/downloads/kustomization.yaml
+++ b/cluster/apps/downloads/kustomization.yaml
@@ -3,7 +3,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespace.yaml
-  - media-pvc.yaml
+  - media-pvc-movies.yaml
+  - media-pvc-tvshows.yaml
   - downloads-pvc.yaml
   - sonarr
   - radarr
