bugfix(downloads) fix groups

--- a/cluster/apps/downloads/sonarr/helm-release.yaml
+++ b/cluster/apps/downloads/sonarr/helm-release.yaml
@@ -17,6 +17,10 @@ spec:
       interval: 15m
   values:
     podSecurityContext:
+      runAsUser: 65534
+      runAsGroup: 65534
+      fsGroup: 65534
+      fsGroupChangePolicy: OnRootMismatch
       supplementalGroups:
         - 65534
     image:
