--- a/cluster/apps/downloads/radarr/helm-release.yaml
+++ b/cluster/apps/downloads/radarr/helm-release.yaml
@@ -17,6 +17,11 @@ spec:
       interval: 15m
   values:
     podSecurityContext:
+      podSecurityContext:
+      runAsUser: 65534
+      runAsGroup: 65534
+      fsGroup: 65534
+      fsGroupChangePolicy: OnRootMismatch
       supplementalGroups:
         - 65534
     image:
