--- a/cluster/apps/downloads/prowlarr/helm-release.yaml
+++ b/cluster/apps/downloads/prowlarr/helm-release.yaml
@@ -17,6 +17,9 @@ spec:
         namespace: flux-system
       interval: 5m
   values:
+    podSecurityContext:
+      supplementalGroups:
+        - 65534
     image:
       repository: ghcr.io/k8s-at-home/prowlarr
       tag: v0.4.0.1802
