--- a/cluster/apps/downloads/qbittorrent/helm-release.yaml
+++ b/cluster/apps/downloads/qbittorrent/helm-release.yaml
@@ -66,6 +66,11 @@ spec:
         enabled: true
         existingClaim: downloads-pvc
     podSecurityContext:
+      podSecurityContext:
+      runAsUser: 65534
+      runAsGroup: 65534
+      fsGroup: 65534
+      fsGroupChangePolicy: OnRootMismatch
       supplementalGroups:
         - 65534
     resources:
