--- a/cluster/apps/downloads/media-pvc.yaml
+++ b/cluster/apps/downloads/media-pvc.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: media-nfs-downloads-pv
-  namespace: media
+  namespace: downloads
 spec:
   storageClassName: media-nfs
   capacity:
@@ -22,7 +22,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: media-downloads-pvc
-  namespace: media
+  namespace: downloads
 spec:
   storageClassName: media-nfs
   accessModes:
