--- a/cluster/apps/downloads/media-pvc.yaml
+++ b/cluster/apps/downloads/media-pvc.yaml
@@ -5,7 +5,7 @@ metadata:
   name: media-nfs-downloads-pv
   namespace: downloads
 spec:
-  storageClassName: media-nfs
+  storageClassName: media-nfs-downloads
   capacity:
     storage: 1Mi
   accessModes:
@@ -24,7 +24,7 @@ metadata:
   name: media-downloads-pvc
   namespace: downloads
 spec:
-  storageClassName: media-nfs
+  storageClassName: media-nfs-downloads
   accessModes:
     - ReadWriteMany
   resources:
