--- a/cluster/apps/downloads/media-pvc.yaml
+++ b/cluster/apps/downloads/media-pvc.yaml
@@ -2,10 +2,10 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: media-nfs-downloads-pv
+  name: media-nfs-downloads
   namespace: downloads
 spec:
-  storageClassName: media-nfs-downloads
+  storageClassName: media-nfs
   capacity:
     storage: 1Mi
   accessModes:
@@ -21,10 +21,10 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: media-downloads-pvc
+  name: media-downloads
   namespace: downloads
 spec:
-  storageClassName: media-nfs-downloads
+  storageClassName: media-nfs
   accessModes:
     - ReadWriteMany
   resources:
