--- a/cluster/apps/downloads/radarr/helm-release.yaml
+++ b/cluster/apps/downloads/radarr/helm-release.yaml
@@ -74,7 +74,7 @@ spec:
         existingClaim: radarr-config
       media:
         enabled: true
-        existingClaim: media-movies
+        existingClaim: media-downloads
         mountPath: "/media"
     resources:
       requests:
