bugfix(downloads): change pvc for sonarr and radarr

--- a/cluster/apps/downloads/sonarr/helm-release.yaml
+++ b/cluster/apps/downloads/sonarr/helm-release.yaml
@@ -73,7 +73,7 @@ spec:
         existingClaim: sonarr-config
       media:
         enabled: true
-        existingClaim: media-tvshows
+        existingClaim: media-downloads
         mountPath: "/media"
     resources:
       requests:
