--- a/cluster/apps/downloads/bazarr/helm-release.yaml
+++ b/cluster/apps/downloads/bazarr/helm-release.yaml
@@ -3,7 +3,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: bazarr
-  namespace: media
+  namespace: downloads
 spec:
   releaseName: bazarr
   interval: 5m
@@ -22,7 +22,7 @@ spec:
       repository: linuxserver/bazarr
       tag: v0.9.0.2-ls89
     env:
-      TZ: "America/New_York"
+      TZ: "America/Los_Angeles"
     ingress:
       main:
         enabled: true
@@ -31,7 +31,7 @@ spec:
           kubernetes.io/tls-acme: "true"
           cert-manager.io/cluster-issuer: letsencrypt-production
           traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
-          traefik.ingress.kubernetes.io/router.middlewares: "network-internal-auth@kubernetescrd"
+          traefik.ingress.kubernetes.io/router.middlewares: "network-internal-only@kubernetescrd"
           external-dns/is-public: "true"
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
         hosts:
