bugfix(downloads): move vpn

--- a/cluster/apps/downloads/kustomization.yaml
+++ b/cluster/apps/downloads/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - media-pvc-movies.yaml
   - media-pvc-tvshows.yaml
   - downloads-pvc.yaml
+  - vpn-gateway
   - sonarr
   - radarr
   - qbittorrent
