--- a/cluster/apps/downloads/vpn-gateway/helm-release.yaml
+++ b/cluster/apps/downloads/vpn-gateway/helm-release.yaml
@@ -80,7 +80,7 @@ spec:
     settings:
       VPN_INTERFACE: wg0
       VXLAN_ID: 43
-      VXLAN_IP_NETWORK: "172.16.1.0/24"
+      VXLAN_IP_NETWORK: 172.16.1
       VPN_BLOCK_OTHER_TRAFFIC: true
       VPN_TRAFFIC_PORT: 51820
       NOT_ROUTED_TO_GATEWAY_CIDRS: "172.16.0.0/12 192.168.0.0/8 192.168.1.0/24"
