bugfix(downloads): remove vpn-routed-gateway

--- a/cluster/apps/downloads/vpn-gateway/helm-release.yaml
+++ b/cluster/apps/downloads/vpn-gateway/helm-release.yaml
@@ -96,5 +96,5 @@ spec:
       gatewayDefault: false
       gatewayLabel: setGateway
       gatewayAnnotation: setGateway
-      namespaceSelector:
-        label: "vpn-routed-gateway"
+      # namespaceSelector:
+      #   label: "vpn-routed-gateway"
